# asciivideoplayer

./: .gitignore  CMakeLists.txt  ascii_drawer.cpp  ascii_drawer.h  ascii_parser.cpp  ascii_parser.h  main.cpp  my_label.cpp  my_label.h  player.cpp  player.h
